Bug 73115 - Spreadsheet: UI: - Format Cells dialog transparent (displayed with no content) for KDE
Summary: Spreadsheet: UI: - Format Cells dialog transparent (displayed with no content...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.1.4.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Jan-Marek Glogowski
URL:
Whiteboard: target:4.3.0 target:4.2.3
Keywords:
: 74054 77687 83053 86657 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-12-29 10:25 UTC by Alex Kempshall
Modified: 2015-11-14 10:38 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
"Format Cells" dialog displayed with no content - transparent. (93.03 KB, image/png)
2013-12-29 10:25 UTC, Alex Kempshall
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Kempshall 2013-12-29 10:25:10 UTC
Created attachment 91274 [details]
"Format Cells" dialog displayed with no content - transparent.

The "Format Cells" dialog is displayed with no content - just a border and title bar. See attachment. To see the content this sometimes works - Click inside the border until the content reveals itself.

Steps to replicate the problem -

1.
Compile libreoffice with the --enable-kde4 flag

2.
Start calc

3.
Fill cells A:1 through BZ:60 with data - I chose 0 thru 9 as my data. See attachment.

4.
Select cells BN:7 thru BZ:47

5.
Right click in selection and chose the "Format Cells" option

6.
"Format Cells" dialog displays as just a border and title bar - no content. See attachment.

7.
Click anywhere within border of the dialog and sometimes the content appears. This sometimes is when a listbox/dropbox is activated by the click. If content doesn't appear click the dialogs close button to gain control of spreadsheet.


Alex
Comment 1 Marco Menardi 2014-01-04 19:08:30 UTC
Reproducible with 4.1.4~rc2 and KDE 4.12 kubuntu 12.04-32
Comment 2 Maxim Monastirsky 2014-01-28 14:41:14 UTC
*** Bug 74054 has been marked as a duplicate of this bug. ***
Comment 3 Jan-Marek Glogowski 2014-03-06 16:01:09 UTC
This looks like a KDE4 backend problem. Doesn't happen with we GNOME backend.
For me not only this Window is transparent, but the whole application stops processing (internal?) X11 (paint?) events (just move the window).

If I close the dialog by guessing the button or pressing ESC, everything continues to work fine...

Actually for me it just happens, if LO has some content in the clipboard (probably again a QClipboard problem).

And it just happens with this modal dialog. I've tested other dialogs, which using the same class (SfxTabDialog), but these don't freeze.

Currently I'm investigating, what makes this particular dialog so special. All threads are actually Yielding, nobody seems to wit for a lock - very strange.
Comment 4 Jan-Marek Glogowski 2014-03-06 19:22:46 UTC
Can you please verify that the shortcut (Ctrl+1) and "Format -> Cells" always work correct? I just can test master, which has additional fixes.
Comment 5 Alex Kempshall 2014-03-06 20:30:15 UTC
(ctrl+1) and Format -> Cells seem to work ok.

Right click in selection and chose the "Format Cells" option - not ok.
Comment 6 Commit Notification 2014-03-10 15:27:44 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=aeda478a02523cec146f6af69710f0391061db56

fdo#73115: Always run timeouts as events



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2014-03-10 17:10:59 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7dba6e0a71d090f06a6a1a39e87572674593b48a&h=libreoffice-4-2

fdo#73115: Always run timeouts as events


It will be available in LibreOffice 4.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Alex Kempshall 2014-03-12 11:16:44 UTC
Jan-Marek

Thanks for the great work. 

As this bug occurs in the KDE integration I can't use the daily builds to test so I will need to compile then test.

It's been a couple of months since my last successful compile so I suspect it will take me some time to get up to date of the latest set of code and successfully compile.

Will keep you posted.

Alex
Comment 9 Maxim Monastirsky 2014-03-12 18:39:47 UTC
Hi Jan-Marek,

Unfortunately with this commit applied, I now observe this bug with top level windows, i.e. the main window is transparent, making the app unusable. Would be great if you could look at this. Thanks in advance.
Comment 10 Jan-Marek Glogowski 2014-03-12 18:56:39 UTC
Which build / version are you testing?
Comment 11 Maxim Monastirsky 2014-03-12 19:19:18 UTC
(In reply to comment #10)
> Which build / version are you testing?
master from commit 2acdcb2374e448371b173feb03650d8d6db8aba2 pulled some hours ago. It's my own build with --enable-kde4. When I revert your commit, this problem disappears.

BTW we have similar reports for Windows, there is one from 2011 (!) - Bug 33985, but I saw a new one some month ago (can't find it now).
Comment 12 Maxim Monastirsky 2014-03-12 20:17:19 UTC
(In reply to comment #11)
> but I saw a new one some month ago (can't find it now).
Ah... found it, but it's about a different problem. Sorry for the false alarm.
Comment 13 Jan-Marek Glogowski 2014-03-13 14:38:11 UTC
Ok - the LO shell doesn't see any events, because these are queued and no one is running the qt main loop.

I'm currently looking into QTimer stuff. It looks like it blocks all Timers, if I open a Dialog from a timer event. There seems to be a race somewhere in the Qt event loop handling (wich is actually glib in Qt 4.8).

The FormatCells dialog is huge compared to most other dialogs. If I block on any dialog with gdb and just press continue, the event handling / QTimers are dropped. This happens with all dialogs in gdb.

So this change makes thuings definitly worse. If I won't find a workaround today for the strange QTimer handling, I'll revert them.

BTW - for me LO just works fine, if you directly open any application and not the shell.
Comment 14 Alex Kempshall 2014-03-21 11:49:16 UTC
Sorry it's taken me so long to get back. It takes me for ever to compile LO as I only have an XP with 2GB of memory! Also, as I only do this every few months I always have to relearn git and compiling LO.

Irrespective as to whether I use Ctrl-1, from the menu bar edit->Format cells or right clicking I do now get the complete dialog. Previously I was only getting it with ctrl-1 and from the menu bar edit->Format Cells. However, the dialog doesn't present itself smoothly, it appears to have 2 or more attempts to draw the dialog before it settles down.

With 4.2.3, cloned from git, more often than not I can't start calc, it just hangs immediately after presenting the sheet, unless I delete the LO config directory AND move libkde4bello.so and libvclplug_kde4lo.so out of the way. This might be unrelated to the patch for this bug as kde4 integrating with LO is buggy, IMHO. However, when I do move libkde4bello.so and libvclplug_kde4lo.so out of the way the Format Cells dialog presents itself smoothly albeit a bit more slowly than when I use LO 4.2.2.

Overall, I think we're probably better off without the patch unless the above issues can be resolved.

Alex
Comment 15 Maxim Monastirsky 2014-05-06 18:16:33 UTC
*** Bug 77687 has been marked as a duplicate of this bug. ***
Comment 16 drazil tembero 2014-05-06 23:16:43 UTC
I have this problem also, I am running Kubuntu 14.04 on 64 bit.

I notice that it does not happen initially when I select format cells, unfortunately I am not certain of the catalyst, but maybe it is saving the file, but not advanced features I am certain. I do this regularly and with a manual click, after a few cells are typed and a little copy-cut and pasting is done the file is saved, and then this transparency problem occurs with the right click format cells menu/dialogue. This problem is not a crash to Desktop, but I must close and re-open Loffice to get the menu to activate.

( I also have encountered a similar sort of time initiated problem with importing pictures into a spreadsheet. After some time generally I have to save before importing a picture as the program will Crash-to-desktop. I only mention this because it will generally work initially. )

I will update if I can narrow the issue to a pinpoint.
Comment 17 Maxim Monastirsky 2014-11-24 13:57:34 UTC
*** Bug 86657 has been marked as a duplicate of this bug. ***
Comment 18 Maxim Monastirsky 2014-11-24 14:02:07 UTC
*** Bug 83053 has been marked as a duplicate of this bug. ***
Comment 19 Jan-Marek Glogowski 2015-11-06 15:51:40 UTC
Is this still a problem with current LO 4.4 / 5.0?

There were a lot of fixes in the KDE4 VCL backend. At least I don't have any more problems based on the KDE event handling and redrawing.

And there also weren't any more duplicates added since a year.

If you have additional KDE4 related bugs, please open a new bug report.

If the bug still exists for you, please reopen it.
Comment 20 francesco 2015-11-14 10:38:30 UTC
I submitted bug 83053 No more problems in Version: 5.0.2.2 Build ID: 00m0(Build:2)
I made steps described by me and now all it's ok